[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/li.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fun/Worldmap/base_npc.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=4]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=1]
outline_size = 3
outline_color = Color( 0.180392, 0.180392, 0.180392, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
outline_size = 3
outline_color = Color( 0.180392, 0.180392, 0.180392, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
outline_size = 3
outline_color = Color( 0.180392, 0.180392, 0.180392, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="P" type="Panel"]
margin_right = 136.0
margin_bottom = 264.0
rect_min_size = Vector2( 136, 264 )
mouse_filter = 1
custom_styles/panel = SubResource( 4 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 112.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "古虚"
align = 1
valign = 1

[node name="R" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 88.0
margin_right = 120.0
margin_bottom = 112.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]境界：[color=yellow]未知[/color][/center]"
text = "境界：未知"

[node name="Label2" type="Label" parent="."]
margin_left = 32.0
margin_top = 160.0
margin_right = 112.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 3 )
text = "守卫"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[connection signal="gui_input" from="." to="." method="_onP"]
